--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title> Primeiro Site </title>
     </head>
     <body>
-        <h1>Primeiro Site Básico (LECLERC LECLERC LECLERC) </h1>
+        <h1 style=" color:red"> Segunda Aula de Git (LECLERC LECLERC LECLERC) </h1>
+        <p style=" color:red"> Data: 24/01/2025 </p>
     </body>
 </html>
